--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ build-backend = "uv_build"
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
+    "pytest-cov>=7.0.0",
 ]
 lint = [
     "pre-commit>=4.3.0",
