style(pytest): display tests count instead of percentage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ lint = [
     "pre-commit>=4.3.0",
 ]
 
+[tool.pytest.ini_options]
+console_output_style = "count"
+
 [tool.isort]
 py_version=310
 # maintain consistency with other quality tools
