--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "datawalk"
 version = "0.1.0"
 description = "Fetch values from nested data structures"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.10"
 dependencies = []
 
 [build-system]
@@ -44,32 +44,25 @@ known_tests = ["tests"]
 target-version = "py310"
 # maintain consistency with other quality tools
 line-length = 120
+# automatically fixes when possible
+fix = true
+
+[tool.ruff.format]
+indent-style = "space"
+line-ending = "lf"
+quote-style = "single"
+
+[tool.ruff.lint]
 # activated families of verifications (https://beta.ruff.rs/docs/rules/
 select = ["B", "E", "F", "W", "N", "SIM", "C4"]
 # do not check:
 # - E501 line lengths: ruff formatter already handles them
 # - B905 zip(*, strict=True): strict was introduced in Python 3.10+
 extend-ignore = ["E501", "B905"]
-# automatically fixes when possible
-fix = true
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 # do not check unused imports in __init__.py files (they expose module features)
 "__init__.py" = ["E402"]
-# visiting function names include uppercase words (visit_FunctionDef)
-"py2puml/parsing/astvisitors.py" = ["N802"]
-"tests/asserts/variable.py" = ["N802"]
-"tests/py2puml/parsing/test_astvisitors.py" = ["N802", "N805"]
-"tests/py2puml/parsing/test_compoundtypesplitter.py" = ["N802"]
-"tests/py2puml/parsing/test_moduleresolver.py" = ["N802"]
-"tests/__init__.py" = ["B023"]
-# test classes with underscore in their names
-"tests/modules/withuniontypes.py" = ['N801']
-
-[tool.ruff.format]
-indent-style = "space"
-line-ending = "lf"
-quote-style = "single"
 
 [tool.ruff.lint.isort]
 forced-separate = ["tests"]
