--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,8 @@
 name: release
 
 on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
   workflow_run:
+    branches: [main]
     workflows: ["test"]
     types:
       - completed
