ci: install uv in the python-semantic-release command

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,6 +76,7 @@ forced-separate = ["tests"]
 [tool.semantic_release]
 assets = []
 build_command = """
+    python -m pip install uv
     uv lock --upgrade-package "$PACKAGE_NAME"
     git add uv.lock
     uv build
